<resources>
    <string name="app_name">SignUp</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sign_up">登录</string>
    <string name="sign_in">注册</string>
    <string name="uuid">学号</string>
    <string name="dept">院系</string>
    <string name="identify">身份</string>
    <string name="back">返回</string>
    <string name="prof">职称</string>
    <string name="name">姓名</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="login_successfully">登录成功</string>
    <string name="login_failed">登录失败</string>
</resources>
